# qwen-stars

./: COMPLETE-SETUP.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: publish-pypi.yml
