[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-stars"
version = "0.1.0"
description = "Collect GitHub stars across entire space"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "onthefox"}]
keywords = ["github", "stars", "trending", "repository"]

dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/onthefox/qwen-stars"
Repository = "https://github.com/onthefox/qwen-stars"

[project.scripts]
qwen-stars = "qwen_stars.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
